# autonomous-sql-analyst-langgraph-crewai

./: .gitignore  Dockerfile  README.md  check_kb.py  database_generator_script.py  debug_python.bat  explanation.txt  finance.db  flow.txt  langgraph.json  main.py  plans.txt  pyproject.toml  requirements.txt  server_v1.py  test_imports.py  test_logging.py  test_parsing.py
CrewAI/: crew.py  main.py  sql_tools.py
CrewAI/config/: agents.yaml  tasks.yaml
LangGRAPH_SQL/: README.md  create_tables.ipynb  customer_agent.py  customer_helper.py  fuzzy_wuzzy.py  generate_kb.py  graph_entry.py  kb.pkl  knowledge_base.ipynb  main.ipynb  rate_limiter_utils.py  router_agent.py  test.csv
